src/ui/snapshots/managarr__ui__ui_tests__snapshot_tests__sonarr_ui_renders_library_tab_error_popup.snap
---
source: src/ui/ui_tests.rs
expression: output
---
╭ Managarr - A Servarr management TUI ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Radarr │ Sonarr │ Lidarr │ Readarr                                                                                                                <?> to open help│
╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭  Stats  ──────────────────────────────────────────────────────────────╮╭  Downloads  ─────────────────────────────────────────────────────────╮╭──────────────────╮
│Sonarr Version:  1.2.3.4           ╭  Keybindings  ──────────────────────────────────────────────────────────────────────────╮                 ││ ⠀⠀⠀⣠⣴⣶⣿⣿⣿⣿⣶⣦⣄⠀⠀⠀ │
│Uptime: 0d 00:00:44                │   Key                          Alt Key                      Description                 │━━━━━━━━━━━━━━━━━││ ⠀⣠⡀⠈⠻⣿⣿⣿⣿⣿⣿⠟⠁⢀⣀⠀ │
│Storage:                           │=> a                                                         add                         │                 ││ ⢰⣿⣿⣦⠐⠄⠉⠉⠉⠉⠠⠂⣰⣿⣿⡆ │
│/path: 100% ━━━━━━━━━━━━━━━━━━━━━━━│   e                                                         edit                        │                 ││ ⣿⣿⣿⣿⡆⠀⣴⣿⣿⣦⠀⢰⣿⣿⣿⣿ │
│Root Folders:                      │   m                                                         toggle monitoring           │                 ││ ⣿⣿⣿⣿⡇⠀⠻⣿⣿⠟⠀⠸⣿⣿⣿⣿ │
│/nfs: 204800.00 GB free            │   o                                                         sort                        │                 ││ ⠸⣿⣿⠟⠠⠂⠀⢀⡀⠀⠐⠄⠻⣿⣿⠇ │
│                                   │   del                                                       delete                      │                 ││ ⠀⠙⠁⢀⣴⣾⣿⣿⣿⣿⣷⣦⡀⠈⠋⠀ │
│                                   │   s                                                         search                      │                 ││ ⠀⠀⠀⠘⠻⠿⣿⣿⣿⣿⠿⠟⠋⠀⠀⠀ │
╰───────────────────────────────────│   f                                                         filter                      │─────────────────╯╰──────────────────╯
╭  Series  ─────────────────────────│   ctrl-r                                                    refresh                     │─────────────────────────────────────╮
│ Library │ Downloads │ Blocklist │ │   u                                                         update all                  │                                     │
│───────────────────────────────────│   enter                                                     details                     │─────────────────────────────────────│
│   Title ▼                         │   esc                                                       cancel filter               │       Monitored  Tags               │
│=> Test                            │   ↑                            k                            scroll up                   │ GB    🏷                             │
│                                   │   ↓                            j                            scroll down                 │                                     │
│                                   │   ←                            h                            previous tab                │                                     │
│                                   │   →                            l                            next tab                    │                                     │
│                                   │   pgUp                         ctrl-u                       page up                     │                                     │
│                                   │   pgDown                       ctrl-d                       page down                   │                                     │
│                                   │   tab                                                       next servarr                │                                     │
│                                   │   shift-tab                                                 previous servarr            │                                     │
│                                   │   q                                                         quit                        │                                     │
│                                   │   ?                                                         show/hide keybindings       │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   │                                                                                         │                                     │
│                                   ╰─────────────────────────────────────────────────────────────────────────────────────────╯                                     │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
